# train-embedder

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
src/job/: main.py
src/job/helpers/: __init__.py  dataset.py  errors.py  eval.py  models.py  save.py  train.py
